Update sample with end to end scenario

--- a/src/Sample/App.config
+++ b/src/Sample/App.config
@@ -6,6 +6,9 @@
     <add name="AzureWebJobsDashboard" connectionString="" />
     <add name="AzureWebJobsStorage" connectionString="" />
   </connectionStrings>
+  <appSettings>
+    <!-- <add key="MS_WebHookReceiverSecret_Slack" value="" /> -->
+  </appSettings>
     <startup> 
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
