--- a/src/Sample/packages.config
+++ b/src/Sample/packages.config
@@ -6,8 +6,8 @@
   <package id="FsPickler" version="1.2.5" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebHooks.Common" version="1.2.0-beta4" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebHooks.Receivers" version="1.2.0-beta4" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebHooks.Common" version="1.2.0-beta6b" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebHooks.Receivers" version="1.2.0-beta6b" targetFramework="net452" />
   <package id="Microsoft.Azure.WebJobs" version="1.1.1" targetFramework="net452" />
   <package id="Microsoft.Azure.WebJobs.Core" version="1.1.1" targetFramework="net452" />
   <package id="Microsoft.Azure.WebJobs.Extensions" version="1.0.1" targetFramework="net452" />
@@ -16,6 +16,7 @@
   <package id="Microsoft.Data.OData" version="5.6.2" targetFramework="net452" />
   <package id="Microsoft.Data.Services.Client" version="5.6.2" targetFramework="net452" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net452" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.10" targetFramework="net452" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.3" targetFramework="net452" />
   <package id="ncrontab" version="2.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
